--- a/ExportToOnnx.ipynb
+++ b/ExportToOnnx.ipynb
@@ -2,31 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
        "Installed package Microsoft.ML version 1.4.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.Data.Analysis version 0.3.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxRuntime version 1.1.0"
       ]
      },
      "metadata": {},
@@ -44,7 +35,16 @@
     {
      "data": {
       "text/html": [
-       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
+       "Installed package Microsoft.ML.OnnxRuntime version 1.1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.Data.Analysis version 0.3.0"
       ]
      },
      "metadata": {},
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>Length (excluding null values)</td><td>30</td><td>30</td></tr><tr><td>1</td><td>Max</td><td>10.5</td><td>122391</td></tr><tr><td>2</td><td>Min</td><td>1.1</td><td>37731</td></tr><tr><td>3</td><td>Mean</td><td>5.3133335</td><td>76003</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -272,11 +272,11 @@
       "*************************************************\n",
       "*       Metrics for regression model      \n",
       "*------------------------------------------------\n",
-      "*       LossFn:        35811326.67\n",
-      "*       R2 Score:      0.95\n",
-      "*       Absolute loss: 5839.03\n",
-      "*       Squared loss:  35811327.25\n",
-      "*       RMS loss:      5984.26\n",
+      "*       LossFn:        34047799\n",
+      "*       R2 Score:      0.94\n",
+      "*       Absolute loss: 5667.39\n",
+      "*       Squared loss:  34047799.12\n",
+      "*       RMS loss:      5835.05\n",
       "*************************************************\n"
      ]
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
      "output_type": "stream",
      "text": [
       "**********************************************************************\n",
-      "Predicted salary: 36054.68, actual salary: 39343.0\n",
+      "Predicted salary: 37134.17, actual salary: 39343.0\n",
       "**********************************************************************\n"
      ]
     }
