--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -1,14 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to install .NET in Jupyter https://github.com/dotnet/interactive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Instal Nuget Packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
+       "Installed package Microsoft.Data.Analysis version 0.3.0"
       ]
      },
      "metadata": {},
@@ -17,7 +38,7 @@
     {
      "data": {
       "text/html": [
-       "Installed package Microsoft.ML version 1.4.0"
+       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
       ]
      },
      "metadata": {},
@@ -35,16 +56,7 @@
     {
      "data": {
       "text/html": [
-       "Installed package Microsoft.ML.OnnxRuntime version 1.1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.Data.Analysis version 0.3.0"
+       "Installed package Microsoft.ML version 1.4.0"
       ]
      },
      "metadata": {},
@@ -55,13 +67,12 @@
     "#r \"nuget:Microsoft.ML,1.4.0\"\n",
     "#r \"nuget:Microsoft.Data.Analysis,0.3.0\"\n",
     "#r \"nuget:Microsoft.ML.OnnxTransformer,1.4.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxConverter,0.16.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxRuntime,1.1.0\""
+    "#r \"nuget:Microsoft.ML.OnnxConverter,0.16.0\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +118,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Load Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +164,7 @@
        "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>Length (excluding null values)</td><td>30</td><td>30</td></tr><tr><td>1</td><td>Max</td><td>10.5</td><td>122391</td></tr><tr><td>2</td><td>Min</td><td>1.1</td><td>37731</td></tr><tr><td>3</td><td>Mean</td><td>5.3133335</td><td>76003</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,12 +245,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Create Pipeline"
+    "##Create Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,8 +259,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,8 +275,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Evaluate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -272,11 +304,11 @@
       "*************************************************\n",
       "*       Metrics for regression model      \n",
       "*------------------------------------------------\n",
-      "*       LossFn:        34047799\n",
-      "*       R2 Score:      0.94\n",
-      "*       Absolute loss: 5667.39\n",
-      "*       Squared loss:  34047799.12\n",
-      "*       RMS loss:      5835.05\n",
+      "*       LossFn:        58448426.67\n",
+      "*       R2 Score:      0.45\n",
+      "*       Absolute loss: 7634.3\n",
+      "*       Squared loss:  58448426.54\n",
+      "*       RMS loss:      7645.16\n",
       "*************************************************\n"
      ]
     }
@@ -295,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,8 +335,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Save ONNX Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,9 +357,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(1,2): error CS1024: Preprocessor directive expected",
+     "output_type": "error",
+     "traceback": [
+      "(1,2): error CS1024: Preprocessor directive expected"
+     ]
+    }
+   ],
+   "source": [
+    "#Run Inferencing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Microsoft.ML.OnnxRuntime version 1.1.0 cannot be added because version 0.5.1 was added previously."
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.Data.Analysis version 0.3.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.ML.OnnxConverter version 0.16.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.ML version 1.4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#r \"nuget:Microsoft.ML.OnnxRuntime,1.1.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(2,32): error CS0234: The type or namespace name 'Tensors' does not exist in the namespace 'Microsoft.ML.OnnxRuntime' (are you missing an assembly reference?)",
+     "output_type": "error",
+     "traceback": [
+      "(2,32): error CS0234: The type or namespace name 'Tensors' does not exist in the namespace 'Microsoft.ML.OnnxRuntime' (are you missing an assembly reference?)"
+     ]
+    }
+   ],
    "source": [
     "using Microsoft.ML.OnnxRuntime;\n",
     "using Microsoft.ML.OnnxRuntime.Tensors;"
@@ -328,9 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(1,80): error CS0246: The type or namespace name 'NodeMetadata' could not be found (are you missing a using directive or an assembly reference?)\r\n(1,16): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,22): error CS0246: The type or namespace name 'DenseTensor<>' could not be found (are you missing a using directive or an assembly reference?)\r\n(5,26): error CS0103: The name 'NamedOnnxValue' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,80): error CS0246: The type or namespace name 'NodeMetadata' could not be found (are you missing a using directive or an assembly reference?)\r\n(1,16): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,22): error CS0246: The type or namespace name 'DenseTensor<>' could not be found (are you missing a using directive or an assembly reference?)\r\n(5,26): error CS0103: The name 'NamedOnnxValue' does not exist in the current context"
+     ]
+    }
+   ],
    "source": [
     "private static NamedOnnxValue GetNamedOnnxValue<T>(IReadOnlyDictionary<string, NodeMetadata> inputMeta, string column, T value)\n",
     "{\n",
@@ -342,38 +470,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "var session = new InferenceSession(MODEL_NAME);\n",
-    "\n",
-    "var inputMeta = session.InputMetadata;\n",
-    "\n",
-    "var container = new List<NamedOnnxValue>();\n",
-    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"yearsExperience\", 1.1f));\n",
-    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"salary\", 0f));\n"
+    "#Load Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************************************************\n",
-      "Predicted salary: 37134.17, actual salary: 39343.0\n",
-      "**********************************************************************\n"
+     "ename": "Unhandled exception",
+     "evalue": "(1,19): error CS0246: The type or namespace name 'InferenceSession' could not be found (are you missing a using directive or an assembly reference?)",
+     "output_type": "error",
+     "traceback": [
+      "(1,19): error CS0246: The type or namespace name 'InferenceSession' could not be found (are you missing a using directive or an assembly reference?)"
+     ]
+    }
+   ],
+   "source": [
+    "var session = new InferenceSession(MODEL_NAME);\n",
+    "\n",
+    "var inputMeta = session.InputMetadata;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Fill in Input Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(1,26): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(2,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(2,40): error CS0103: The name 'inputMeta' does not exist in the current context\r\n(3,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(3,40): error CS0103: The name 'inputMeta' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,26): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(2,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(2,40): error CS0103: The name 'inputMeta' does not exist in the current context\r\n(3,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(3,40): error CS0103: The name 'inputMeta' does not exist in the current context"
+     ]
+    }
+   ],
+   "source": [
+    "var container = new List<NamedOnnxValue>();\n",
+    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"yearsExperience\", 1.1f));\n",
+    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"salary\", 0f));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Run Inferencing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "(1,14): error CS0103: The name 'session' does not exist in the current context\r\n(1,26): error CS0103: The name 'container' does not exist in the current context",
+     "output_type": "error",
+     "traceback": [
+      "(1,14): error CS0103: The name 'session' does not exist in the current context\r\n(1,26): error CS0103: The name 'container' does not exist in the current context"
      ]
     }
    ],
    "source": [
     "var result = session.Run(container);\n",
-    "var output = session.Run(container).First(x => x.Name == \"Score0\").AsTensor<float>().Max();\n",
+    "var output = result.First(x => x.Name == \"Score0\").AsTensor<float>().Max();\n",
     "\n",
     "Console.WriteLine($\"**********************************************************************\");\n",
     "Console.WriteLine($\"Predicted salary: {output:0.####}, actual salary: 39343.0\");\n",
