--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -3,20 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
+    "###Leverage Power of Machine Learning with ONNX\n",
+    "\n",
     "How to install .NET in Jupyter https://github.com/dotnet/interactive"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "##Instal Nuget Packages"
    ]
@@ -26,6 +21,24 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.ML.OnnxConverter version 0.16.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installed package Microsoft.ML.OnnxRuntime version 1.1.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -47,15 +60,6 @@
     {
      "data": {
       "text/html": [
-       "Installed package Microsoft.ML.OnnxConverter version 0.16.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
        "Installed package Microsoft.ML version 1.4.0"
       ]
      },
@@ -67,7 +71,8 @@
     "#r \"nuget:Microsoft.ML,1.4.0\"\n",
     "#r \"nuget:Microsoft.Data.Analysis,0.3.0\"\n",
     "#r \"nuget:Microsoft.ML.OnnxTransformer,1.4.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxConverter,0.16.0\""
+    "#r \"nuget:Microsoft.ML.OnnxConverter,0.16.0\"\n",
+    "#r \"nuget:Microsoft.ML.OnnxRuntime,1.1.0\""
    ]
   },
   {
@@ -304,11 +309,11 @@
       "*************************************************\n",
       "*       Metrics for regression model      \n",
       "*------------------------------------------------\n",
-      "*       LossFn:        58448426.67\n",
-      "*       R2 Score:      0.45\n",
-      "*       Absolute loss: 7634.3\n",
-      "*       Squared loss:  58448426.54\n",
-      "*       RMS loss:      7645.16\n",
+      "*       LossFn:        49995681.5\n",
+      "*       R2 Score:      0.96\n",
+      "*       Absolute loss: 5718.43\n",
+      "*       Squared loss:  49995682.17\n",
+      "*       RMS loss:      7070.76\n",
       "*************************************************\n"
      ]
     }
@@ -356,90 +361,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Run Inferencing\n",
+    "using nuget:Microsoft.ML.OnnxRuntime,1.1.0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Unhandled exception",
-     "evalue": "(1,2): error CS1024: Preprocessor directive expected",
-     "output_type": "error",
-     "traceback": [
-      "(1,2): error CS1024: Preprocessor directive expected"
-     ]
-    }
-   ],
-   "source": [
-    "#Run Inferencing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Microsoft.ML.OnnxRuntime version 1.1.0 cannot be added because version 0.5.1 was added previously."
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.Data.Analysis version 0.3.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxConverter version 0.16.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML version 1.4.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#r \"nuget:Microsoft.ML.OnnxRuntime,1.1.0\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "Unhandled exception",
-     "evalue": "(2,32): error CS0234: The type or namespace name 'Tensors' does not exist in the namespace 'Microsoft.ML.OnnxRuntime' (are you missing an assembly reference?)",
-     "output_type": "error",
-     "traceback": [
-      "(2,32): error CS0234: The type or namespace name 'Tensors' does not exist in the namespace 'Microsoft.ML.OnnxRuntime' (are you missing an assembly reference?)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Microsoft.ML.OnnxRuntime;\n",
     "using Microsoft.ML.OnnxRuntime.Tensors;"
@@ -447,18 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Unhandled exception",
-     "evalue": "(1,80): error CS0246: The type or namespace name 'NodeMetadata' could not be found (are you missing a using directive or an assembly reference?)\r\n(1,16): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,22): error CS0246: The type or namespace name 'DenseTensor<>' could not be found (are you missing a using directive or an assembly reference?)\r\n(5,26): error CS0103: The name 'NamedOnnxValue' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,80): error CS0246: The type or namespace name 'NodeMetadata' could not be found (are you missing a using directive or an assembly reference?)\r\n(1,16): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(4,22): error CS0246: The type or namespace name 'DenseTensor<>' could not be found (are you missing a using directive or an assembly reference?)\r\n(5,26): error CS0103: The name 'NamedOnnxValue' does not exist in the current context"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "private static NamedOnnxValue GetNamedOnnxValue<T>(IReadOnlyDictionary<string, NodeMetadata> inputMeta, string column, T value)\n",
     "{\n",
@@ -478,18 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Unhandled exception",
-     "evalue": "(1,19): error CS0246: The type or namespace name 'InferenceSession' could not be found (are you missing a using directive or an assembly reference?)",
-     "output_type": "error",
-     "traceback": [
-      "(1,19): error CS0246: The type or namespace name 'InferenceSession' could not be found (are you missing a using directive or an assembly reference?)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var session = new InferenceSession(MODEL_NAME);\n",
     "\n",
@@ -505,18 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Unhandled exception",
-     "evalue": "(1,26): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(2,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(2,40): error CS0103: The name 'inputMeta' does not exist in the current context\r\n(3,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(3,40): error CS0103: The name 'inputMeta' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,26): error CS0246: The type or namespace name 'NamedOnnxValue' could not be found (are you missing a using directive or an assembly reference?)\r\n(2,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(2,40): error CS0103: The name 'inputMeta' does not exist in the current context\r\n(3,15): error CS0103: The name 'GetNamedOnnxValue' does not exist in the current context\r\n(3,40): error CS0103: The name 'inputMeta' does not exist in the current context"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var container = new List<NamedOnnxValue>();\n",
     "container.Add(GetNamedOnnxValue<float>(inputMeta, \"yearsExperience\", 1.1f));\n",
@@ -532,15 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Unhandled exception",
-     "evalue": "(1,14): error CS0103: The name 'session' does not exist in the current context\r\n(1,26): error CS0103: The name 'container' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,14): error CS0103: The name 'session' does not exist in the current context\r\n(1,26): error CS0103: The name 'container' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "Predicted salary: 36819.01, actual salary: 39343.0\n",
+      "**********************************************************************\n"
      ]
     }
    ],
@@ -554,11 +461,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#That's all folks!"
+   ]
   }
  ],
  "metadata": {
