--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Leverage Power of Machine Learning with ONNX\n",
+    "# Leverage Power of Machine Learning with ONNX\n",
     "\n",
     "How to install .NET in Jupyter https://github.com/dotnet/interactive"
    ]
@@ -13,12 +13,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Instal Nuget Packages"
+    "## Instal Nuget Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,12 +126,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Load Data"
+    "## Load Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "<table><thead><th><i>index</i></th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>1.1</td><td>39343</td></tr><tr><td>1</td><td>1.3</td><td>46205</td></tr><tr><td>2</td><td>1.5</td><td>37731</td></tr><tr><td>3</td><td>2</td><td>43525</td></tr><tr><td>4</td><td>2.2</td><td>39891</td></tr><tr><td>5</td><td>2.9</td><td>56642</td></tr><tr><td>6</td><td>3</td><td>60150</td></tr><tr><td>7</td><td>3.2</td><td>54445</td></tr><tr><td>8</td><td>3.2</td><td>64445</td></tr><tr><td>9</td><td>3.7</td><td>57189</td></tr><tr><td>10</td><td>3.9</td><td>63218</td></tr><tr><td>11</td><td>4</td><td>55794</td></tr><tr><td>12</td><td>4</td><td>56957</td></tr><tr><td>13</td><td>4.1</td><td>57081</td></tr><tr><td>14</td><td>4.5</td><td>61111</td></tr><tr><td>15</td><td>4.9</td><td>67938</td></tr><tr><td>16</td><td>5.1</td><td>66029</td></tr><tr><td>17</td><td>5.3</td><td>83088</td></tr><tr><td>18</td><td>5.9</td><td>81363</td></tr><tr><td>19</td><td>6</td><td>93940</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>Length (excluding null values)</td><td>30</td><td>30</td></tr><tr><td>1</td><td>Max</td><td>10.5</td><td>122391</td></tr><tr><td>2</td><td>Min</td><td>1.1</td><td>37731</td></tr><tr><td>3</td><td>Mean</td><td>5.3133335</td><td>76003</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,12 +250,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Create Pipeline"
+    "## Create Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +267,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Training"
+    "## Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,12 +283,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Evaluate"
+    "## Evaluate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -309,11 +309,11 @@
       "*************************************************\n",
       "*       Metrics for regression model      \n",
       "*------------------------------------------------\n",
-      "*       LossFn:        49995681.5\n",
-      "*       R2 Score:      0.96\n",
-      "*       Absolute loss: 5718.43\n",
-      "*       Squared loss:  49995682.17\n",
-      "*       RMS loss:      7070.76\n",
+      "*       LossFn:        69766371.67\n",
+      "*       R2 Score:      0.72\n",
+      "*       Absolute loss: 7715.65\n",
+      "*       Squared loss:  69766371.87\n",
+      "*       RMS loss:      8352.63\n",
       "*************************************************\n"
      ]
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,12 +343,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Save ONNX Model"
+    "## Save ONNX Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,13 +364,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Run Inferencing\n",
+    "## Run Inferencing\n",
     "using nuget:Microsoft.ML.OnnxRuntime,1.1.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,12 +397,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Load Model"
+    "## Load Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,12 +415,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Fill in Input Data"
+    "## Fill in Input Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,12 +433,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Run Inferencing"
+    "## Run Inferencing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
      "output_type": "stream",
      "text": [
       "**********************************************************************\n",
-      "Predicted salary: 36819.01, actual salary: 39343.0\n",
+      "Predicted salary: 36480.3, actual salary: 39343.0\n",
       "**********************************************************************\n"
      ]
     }
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#That's all folks!"
+    "### That's all folks!"
    ]
   }
  ],
