--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -229,6 +229,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use ML.NET\n",
+    "To use ML.NET, need to create instance of MLContext."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -397,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Model"
+    "## Load ONNX Model"
    ]
   },
   {
@@ -415,7 +423,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fill in Input Data"
+    "## Fill in Input Data\n",
+    "\n",
+    "![ONNX Netron Image](onnx-netron.PNG)"
    ]
   },
   {
